Add navigation link to reports page

--- a/src/ExpenseExplorer.GUI/Components/Layout/MainLayout.razor
+++ b/src/ExpenseExplorer.GUI/Components/Layout/MainLayout.razor
@@ -6,6 +6,7 @@
             <RadzenPanelMenuItem Text="Home" Icon="home" Path=""/>
             <RadzenPanelMenuItem Text="Receipts" Icon="add_shopping_cart" Path="receipts"/>
             <RadzenPanelMenuItem Text="Income" Icon="account_balance" Path="income"/>
+            <RadzenPanelMenuItem Text="Reports" Icon="donut_small" Path="reports"/>
         </RadzenPanelMenu>
     </RadzenSidebar>
     <RadzenBody>
